--- a/src/mosaic.css
+++ b/src/mosaic.css
@@ -496,15 +496,15 @@
     color: #738694;
 }
 
-.mosaic.mosaic-blueprint-theme
-.mosaic-window.additional-controls-open
-.mosaic-window-toolbar,
-.mosaic.mosaic-blueprint-theme
-.mosaic-preview.additional-controls-open
-.mosaic-window-toolbar {
-    box-shadow: 0 1px 0 0 0 0 1px rgba(16, 22, 26, 0.15),
-    0 0 0 rgba(16, 22, 26, 0), 0 0 0 rgba(16, 22, 26, 0);
-}
+/*.mosaic.mosaic-blueprint-theme*/
+/*.mosaic-window.additional-controls-open*/
+/*.mosaic-window-toolbar,*/
+/*.mosaic.mosaic-blueprint-theme*/
+/*.mosaic-preview.additional-controls-open*/
+/*.mosaic-window-toolbar {*/
+/*    box-shadow: 0 1px 0 0 0 0 1px rgba(16, 22, 26, 0.15),*/
+/*    0 0 0 rgba(16, 22, 26, 0), 0 0 0 rgba(16, 22, 26, 0);*/
+/*}*/
 
 .mosaic.mosaic-blueprint-theme .mosaic-window .mosaic-preview,
 .mosaic.mosaic-blueprint-theme .mosaic-preview .mosaic-preview {
